Work inside of iframes

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -9,7 +9,8 @@
 			"css": ["flying-focus.css"],
 			"matches": [
 				"<all_urls>"
-			]
+			],
+			"all_frames": true
 		}
 	],
 	"author": "Nikita Vasilyev",
