--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,6 +13,10 @@
 			"all_frames": true
 		}
 	],
+	"icons": {
+		"48": "icon_48.png",
+		"128": "icon_128.png"
+	},
 	"author": "Nikita Vasilyev",
 	"homepage_url": "http://n12v.com/focus-transition/"
 }
